--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -13,4 +13,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "guru"
+path = "src/guru.rs"
+
 [dependencies]
+clap = { version = "3.0", features = ["derive"] }
