Add event logger and progress bar.

--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -19,3 +19,6 @@ path = "src/guru.rs"
 
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
+env_logger = "0.9.0"
+indicatif = "0.17.1"
+log = "0.4.17"
