--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/guru.rs"
 [dependencies]
 clap = { version = "3.2.22", features = ["derive"] }
 env_logger = "0.9.0"
+human-panic = "1.0.3"
 indicatif = "0.17.1"
 log = "0.4.17"
 
