--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -21,6 +21,7 @@ env_logger = "0.9.0"
 human-panic = "1.0.3"
 indicatif = "0.17.1"
 log = "0.4.17"
+serde_json = "1.0.85"
 
 [dev-dependencies]
 assert_cmd = "2.0"
