--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -20,10 +20,12 @@ clap = { version = "3.2.22", features = ["derive"] }
 env_logger = "0.9.0"
 human-panic = "1.0.3"
 indicatif = "0.17.1"
+ipfs = { git = "https://github.com/rs-ipfs/rust-ipfs" }
 log = "0.4.17"
 reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0.85"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1"
 
 [dev-dependencies]
 assert_cmd = "2.0"
