--- a/guru-bot/Cargo.toml
+++ b/guru-bot/Cargo.toml
@@ -30,3 +30,11 @@ tokio-stream = "0.1"
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "2.1"
+
+[dependencies.uuid]
+version = "1.1.2"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
